# AIPlayGround

./: .env.local.example  .gitignore  CLAUDE.md  README.md  package-lock.json
app/: globals.css  page.tsx
docs/plans/: 2025-02-18-gemini-chat-design.md  2025-02-18-gemini-chat-implementation.md  2026-02-15-chatbot-design.md  2026-02-15-chatbot-implementation.md
gemini-chat/: .gitignore  Makefile  README.md
gemini-chat/backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
gemini-chat/backend/src/gemini_chat_backend/: __init__.py  config.py  main.py
gemini-chat/backend/src/gemini_chat_backend/api/: __init__.py  deps.py  routes.py
gemini-chat/backend/src/gemini_chat_backend/api/endpoints/: chat.py  health.py  tools.py
gemini-chat/backend/src/gemini_chat_backend/core/: __init__.py  deepseek.py  react_orchestrator.py  reasoning_parser.py
gemini-chat/backend/src/gemini_chat_backend/models/: __init__.py  chat.py  react.py  tool.py
gemini-chat/backend/src/gemini_chat_backend/tools/: __init__.py  base.py  code_analyzer.py  exec.py  file.py  registry.py
gemini-chat/backend/src/gemini_chat_backend/utils/: __init__.py  logging.py
gemini-chat/backend/tests/: __init__.py  test_config.py  test_main.py
gemini-chat/backend/tests/core/: test_deepseek.py
gemini-chat/backend/tests/tools/: __init__.py  test_code_analyzer.py  test_exec.py
gemini-chat/backend/tests/utils/: test_logging.py
gemini-chat/frontend/: .gitignore  package-lock.json  package.json
gemini-chat/frontend/app/: layout.tsx  page.tsx
gemini-chat/frontend/app/api/chat/: route.ts
gemini-chat/frontend/app/api/tools/: exec.ts  file.ts  index.ts
gemini-chat/frontend/lib/: api.ts  deepseek.ts  prompts.ts  react-orchestrator.ts  reasoning-parser.ts  stream.ts  types.ts
